--- a/src/es165_moveit_moveit_config/config/ros2_controllers.yaml
+++ b/src/es165_moveit_moveit_config/config/ros2_controllers.yaml
@@ -1,3 +1,4 @@
+#Sets up the individual controllers for the robot arm
 controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
@@ -9,6 +10,10 @@ controller_manager:
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
+joint_state_broadcaster:
+  ros__parameters:
+    use_sim_time: true
+
 arm_controller:
   ros__parameters:
     use_sim_time: true
@@ -19,20 +24,14 @@ arm_controller:
       - joint_4_r
       - joint_5_b
       - joint_6_t
-
-    command_interfaces:
-      # - effort
+    command_interfaces: # PID control using position
       - position
-    state_interfaces:
+    state_interfaces: # Tracks the current position and velocity of the joints
       - position
       - velocity
-      # - effort
-      
-
-    # gains:
-    #   joint_1_s: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
-    #   joint_2_l: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
-    #   joint_3_u: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
-    #   joint_4_r: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
-    #   joint_5_b: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
-    #   joint_6_t: { p: 50.0, d: 5.0, i: 0.1, i_clamp: 1.0 }
+    # Open-loop control - trust the trajectory, don't fight current state
+    open_loop_control: false
+    # Allow non-zero velocity at trajectory start
+    allow_nonzero_velocity_at_trajectory_start: true
+    # Interpolation for smooth commands
+    interpolate_at_configured_rate: true
