Servo control using MoveIt2 Servo

--- a/src/es165_moveit_moveit_config/config/ros2_controllers.yaml
+++ b/src/es165_moveit_moveit_config/config/ros2_controllers.yaml
@@ -1,7 +1,7 @@
 #Sets up the individual controllers for the robot arm
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
+    update_rate: 200  # Hz
     use_sim_time: true
 
     joint_state_broadcaster:
@@ -9,6 +9,8 @@ controller_manager:
 
     arm_controller:
       type: joint_trajectory_controller/JointTrajectoryController
+    
+
 
 joint_state_broadcaster:
   ros__parameters:
@@ -24,8 +26,9 @@ arm_controller:
       - joint_4_r
       - joint_5_b
       - joint_6_t
-    command_interfaces: # PID control using position
-      - position
+    command_interfaces:
+      - position  # For MoveIt trajectory execution (plan & execute)
+      - velocity  # For MoveIt Servo velocity commands
     state_interfaces: # Tracks the current position and velocity of the joints
       - position
       - velocity
@@ -35,3 +38,4 @@ arm_controller:
     allow_nonzero_velocity_at_trajectory_start: true
     # Interpolation for smooth commands
     interpolate_at_configured_rate: true
+    allow_partial_joints_goal: true
