--- a/src/es165_moveit_moveit_config/config/servo_params.yaml
+++ b/src/es165_moveit_moveit_config/config/servo_params.yaml
@@ -1,5 +1,5 @@
 ## Properties of outgoing commands
-publish_period: 0.02  # 1/Nominal publish rate [seconds]
+publish_period: 0.03  # 1/Nominal publish rate [seconds]
 max_expected_latency: 0.05  # delay between sending a command and the robot executing it [seconds]
 
 command_in_type: "speed_units"  # "unitless"> in the range [-1:1], as if from joystick. "speed_units"> cmds are in m/s and rad/s
@@ -8,7 +8,7 @@ command_in_type: "speed_units"  # "unitless"> in the range [-1:1], as if from jo
 # What type of topic does your robot driver expect?
 # Currently supported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
 command_out_type: trajectory_msgs/JointTrajectory
-command_out_topic: /arm_controller/joint_trajectory  # Publish outgoing commands here
+command_out_topic: arm_controller/joint_trajectory  # Publish outgoing commands here
 
 # What to publish? Can save some bandwidth as most robots only require positions or velocities
 publish_joint_positions: true
@@ -29,7 +29,7 @@ check_octomap_collisions: false  # Check collision against the octomap (if a 3D 
 ## MoveIt properties
 move_group_name: arm  # Often 'manipulator' or 'arm'
 planning_frame: base_link  # The frame in which to plan motions
-ee_frame_name: tool0  # The end-effector frame name
+ee_frame_name: ee_base_link  # The end-effector frame name
 robot_link_command_frame: base_link  # The frame for robot link commands
 
 ## Configure handling of singularities and joint limits
@@ -39,16 +39,16 @@ leaving_singularity_threshold_multiplier: 2.0  # Multiply the hard stop limit by
 # # Added as a buffer to joint variable position bounds [in that joint variable's respective units].
 # # Can be of size 1, which applies the margin to all joints, or the same size as the number of degrees of freedom of the active joint group.
 # # If moving quickly, make these values larger.
-joint_limit_margins: [0.05]
+joint_limit_margins: [0.001]
 
 ## Topic names
 cartesian_command_in_topic: ~/delta_twist_cmds  # Topic for incoming Cartesian twist commands
 joint_command_in_topic: ~/delta_joint_cmds  # Topic for incoming joint angle commands
-joint_topic: /isaac_joint_states  # Get joint states from this topic
+joint_topic: /joint_states  # Get joint states from this topic
 status_topic: ~/status  # Publish status to this topic
 
 ## Collision checking for the entire robot body
 check_collisions: false  # Check collisions? (Temporarily disabled for debugging)
-collision_check_rate: 1.0  # [Hz] Collision-checking can easily bog down a CPU if done too often.
-self_collision_proximity_threshold: 0.01  # Start decelerating when a self-collision is this far [m]
-scene_collision_proximity_threshold: 0.02  # Start decelerating when a scene collision is this far [m]
+collision_check_rate: 5.0  # [Hz] Collision-checking can easily bog down a CPU if done too often.
+self_collision_proximity_threshold: 0.001  # Start decelerating when a self-collision is this far [m]
+scene_collision_proximity_threshold: 0.001  # Start decelerating when a scene collision is this far [m]
