profiles YEET also improved the torque logic DOPE

--- a/src/es165_moveit_moveit_config/config/servo_params.yaml
+++ b/src/es165_moveit_moveit_config/config/servo_params.yaml
@@ -48,7 +48,7 @@ joint_topic: /joint_states  # Get joint states from this topic
 status_topic: ~/status  # Publish status to this topic
 
 ## Collision checking for the entire robot body
-check_collisions: false  # Check collisions? (Temporarily disabled for debugging)
-collision_check_rate: 5.0  # [Hz] Collision-checking can easily bog down a CPU if done too often.
+check_collisions: true  # Check collisions? (Temporarily disabled for debugging)
+collision_check_rate: 20.0  # [Hz] Collision-checking can easily bog down a CPU if done too often.
 self_collision_proximity_threshold: 0.001  # Start decelerating when a self-collision is this far [m]
 scene_collision_proximity_threshold: 0.001  # Start decelerating when a scene collision is this far [m]
